# install-tests

./: APOLOGY.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: FAIL_FAST_POLICY.md
src/: boot_injection.rs  executor.rs  interactive.rs  lib.rs  main.rs  preflight.rs
src/checkpoints/: mod.rs  state.rs
src/distro/: acorn.rs  iuppiter.rs  levitate.rs  mod.rs  openrc_base.rs  ralph.rs
src/qemu/: boot.rs  builder.rs  chroot.rs  console.rs  exec.rs  mod.rs  patterns.rs  session.rs  sync.rs  utils.rs
src/qemu/qmp/: capture.rs  client.rs  input.rs  mod.rs
src/qemu/serial/: boot.rs  console.rs  exec.rs  mod.rs
src/scenarios/: compat.rs  mod.rs  state.rs
src/stages/: mod.rs  state.rs
src/steps/: mod.rs  phase1_boot.rs  phase2_disk.rs  phase3_base.rs  phase4_config.rs  phase5_boot.rs  phase6_verify.rs
test-scripts/: README.md  automated-login.sh  checkpoint-1-live-boot.sh  checkpoint-2-live-tools.sh  checkpoint-3-installation.sh  checkpoint-4-installed-boot.sh  checkpoint-5-automated-login.sh  checkpoint-6-daily-driver.sh  install.sh  installed-boot.sh  installed-tools.sh  live-boot-ssh-preflight.sh  live-boot.sh  live-tools.sh  stage-01-live-boot.sh  stage-01-ssh-preflight.sh  stage-02-live-tools.sh  stage-03-installation.sh  stage-04-installed-boot.sh  stage-05-automated-login.sh  stage-06-daily-driver.sh
test-scripts/lib/: common.sh
