[package]
name = "install-tests"
version = "0.1.0"
edition = "2021"
description = "E2E test runner for LevitateOS installation process"
license = "MIT"

[[bin]]
name = "boot-test"
path = "src/bin/boot-test.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
distro-spec = { path = "../../distro-spec" }
leviso-cheat-guard = "0.1"
libc = "0.2"
