[package]
name = "install-tests"
version = "0.1.0"
edition = "2021"
description = "E2E test runner for LevitateOS installation process"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "serial"
path = "src/bin/serial.rs"

[[bin]]
name = "qmp"
path = "src/bin/qmp.rs"

[[bin]]
name = "checkpoints"
path = "src/bin/checkpoints.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
distro-spec = { path = "../../distro-spec" }
leviso-cheat-guard = { path = "../cheat-guard" }
recqemu = { path = "../../tools/recqemu" }
fsdbg = { path = "../fsdbg" }
libc = "0.2"
